primeira aula: ok

--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
 
         <title>dev.finance$</title>
 
+        <!--linkando css-->
         <link rel="stylesheet" href="./style.css">
+
+        <!--fontes-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap">
 
     </head>
 
     <body>
 
         <header>
-            <h1>dev.finance$</h1>
+            <h1 id="logo">dev.finance$</h1>
         </header>
 
-        <main>
+        <main class="container">
             <section id="balance">
                 <h2>Balanço</h2>
 
@@ -30,7 +35,7 @@
                     <h3>Saídas</h2>
                         <p>R$ 2.000,00</p>
                 </div>
-                <div class="card">
+                <div class="card total class="description"">
                     <h3>Total</h3>
                     <p>R$ 3.000,00</p>
                 </div>
@@ -48,19 +53,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Luz</td>
-                            <td>R$ 500,00</td>
-                            <td>23/01/2021</td>
+                            <td class="description">Luz</td>
+                            <td class="expense">R$ 500,00</td>
+                            <td class="date">23/01/2021</td>
                         </tr>
                         <tr>
-                            <td>Criação website</td>
-                            <td>R$ 5000,00</td>
-                            <td>25/01/2021</td>
+                            <td class="description">Criação website</td>
+                            <td class="income">R$ 5000,00</td>
+                            <td class="date">25/01/2021</td>
                         </tr>
                         <tr>
-                            <td>Internet</td>
-                            <td>R$ 200,00</td>
-                            <td>27/01/2021</td>
+                            <td class="description">Internet</td>
+                            <td class="expense">R$ 200,00</td>
+                            <td class="date">27/01/2021</td>
                         </tr>
                     </tbody>
                 </table>
