terceira aula: script totalmente funcional e site pronto!

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span>Entradas</span>
                         <img src="./assets/income.svg" alt="imagem de entrada">
                     </h3>
-                    <p>R$ 5.000,00</p>
+                    <p id="incomeDisplay">R$ 0,00</p>
                 </div>
 
                 <div class="card">
@@ -39,7 +39,7 @@
                         <span>Saídas</span>
                         <img src="./assets/expense.svg" alt="imagem de Saídas">
                     </h2>
-                        <p>R$ 2.000,00</p>
+                        <p id="expenseDisplay">R$ 0,00</p>
                 </div>
 
                 <div class="card total">
@@ -47,7 +47,7 @@
                         <span>Total</span>
                         <img src="./assets/total.svg" alt="imagem de total">
                     </h3>
-                    <p>R$ 3.000,00</p>
+                    <p id="totalDisplay">R$ 0,00</p>
                 </div>
             </section>
 
@@ -68,30 +68,6 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td class="description">Luz</td>
-                            <td class="expense">R$ 500,00</td>
-                            <td class="date">23/01/2021</td>
-                            <td>
-                                <img src="./assets/minus.svg" alt="Remover Transação">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="description">Criação website</td>
-                            <td class="income">R$ 5000,00</td>
-                            <td class="date">25/01/2021</td>
-                            <td>
-                                <img src="./assets/minus.svg" alt="Remover Transação">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="description">Internet</td>
-                            <td class="expense">R$ 200,00</td>
-                            <td class="date">27/01/2021</td>
-                            <td>
-                                <img src="./assets/minus.svg" alt="Remover Transação">
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
             </section>
@@ -101,7 +77,7 @@
             <div class="modal">
                 <div class="form">
                     <h2>Nova Transação</h2>
-                    <form action="">
+                    <form action="" onsubmit="Form.submit(event)">
                         <div class="input-group">
                             <label 
                                 class="sr-only"
@@ -154,22 +130,7 @@
             <p>dev.finance$</p>
         </footer>
 
-        <script>
-            const Modal = {
-                Open() {
-                    //abrir o modal, adicionando a class active
-                    document
-                        .querySelector('.modal-overlay')
-                        .classList.add('active')
-                },
-                Close() {
-                    //fechar o modal, removendo a class active
-                    document
-                        .querySelector('.modal-overlay')
-                        .classList.remove('active')
-                }
-            }
-        </script>
+        <script src="./script.js"></script>
     </body>
 
 </html>
